Update portfolio section with new heading and logo image for enhanced presentation

--- a/index.html
+++ b/index.html
@@ -305,18 +305,25 @@
       <span id="dynamic-separator" class="separator-text" aria-hidden="true"></span>
     </div>
 
-    <h2>🎮 Here are the few apps that I published!</h2>
 
+    <br>
+
+    <h1>Portfolio.</h1>
 
     <div class="game-item" style="position: relative; margin-top: 20px; margin-bottom: 20px;">
       <p class="bold-text" style="position: absolute; left: -107px; top: 30px; margin: 0;">...</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
         <p style="font-size: 21px;">Something big is coming... ✨</p>
-        <div style="text-align: center; padding: 40px 20px; color: #888;">
-          <p style="font-size: 18px; margin: 0;">🚀 Stay tuned!</p>
+        <div style="text-align: center; color: #888;">
+          <img src="logo-roamates.png" alt="Roamates" style="width: 200px; height: 200px;">
+          <p style="font-size: 18px; margin-top: 24px;">🚀 Stay tuned!</p>
         </div>
       </div>
     </div>
+
+
+    <br>
+    <h2> Here are the few apps that I published!</h2>
 
     <div class="game-item" style="position: relative; margin-top: 20px; margin-bottom: 20px;">
       <p class="bold-text" style="position: absolute; left: -107px; top: 30px; margin: 0;">3.</p>
@@ -396,7 +403,7 @@
 
   <div id="projects-section" style="margin: 40px 0;">
     <div class="container">
-      <h2>💻 Projects Portfolio</h2>
+      <h1>💻 Projects.</h1>
 
       <div class="projects-grid">
         <!-- Project 1: Chain Reaction Game -->
