Add padding to game description paragraphs for improved layout

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <div class="game-item" style="position: relative; margin-top: 20px; margin-bottom: 20px;">
       <p class="bold-text" style="position: absolute; left: -107px; top: 30px; margin: 0;">2.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
-        <p style="font-size: 21px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/"
+        <p style="font-size: 21px; padding-bottom: 20px;">Play chain reaction <a href="https://bharath-bandaru.github.io/chain-reaction-game/"
             target="_blank" style="color: green; text-decoration: underline;">here</a>. ✨</p>
         <div class="image-container">
           <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
@@ -364,7 +364,7 @@
     <div class="game-item" style="position: relative; margin-top: 20px; margin-bottom: 20px;">
       <p class="bold-text" style="position: absolute; left: -107px; top: 30px; margin: 0;">1.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
-        <p style="font-size: 21px;">Escape Puzzle Game <a href="https://bharath-bandaru.github.io/escape-web/"
+        <p style="font-size: 21px; padding-bottom: 20px;">Escape Puzzle Game <a href="https://bharath-bandaru.github.io/escape-web/"
             target="_blank" style="color: green; text-decoration: underline;">here</a>. ✨</p>
         <div class="image-container">
           <a href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer">
