Enhance layout with border-radius for game content and education items; update about me section for clarity

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
       height: auto;
       margin-top: 20px;
       position: relative;
+      border-radius: 24px;
+    }
+
+    .game-content {
+      border-radius: 24px;
     }
 
     .avatar {
@@ -172,6 +177,7 @@
     .experience-item,
     .education-item {
       margin: 15px 0;
+      border-radius: 24px;
     }
 
     /* Projects grid layout */
@@ -289,7 +295,7 @@
       <div class="text-content">
         <h2>👋 <strong>Hi there.</strong></h2>
         <p class="about-me">
-          I am a Software Engineer with experience building scalable web, cloud, and mobile applications, with a strong focus on system design and real-world impact. Currently working at Script Health, I help deliver enterprise healthcare solutions for Fortune 500 clients by designing robust architectures, implementing cloud services, and building intuitive user experiences. I am also actively deepening my work in AI and machine learning, exploring how intelligent systems can be applied to real-world products. Outside of work, I enjoy building side projects, and I take pride in attention to detail and a strong commitment to creating software that makes a meaningful difference.
+          I am a Software Engineer with experience building scalable web, cloud, and mobile applications, with a strong focus on system design and real-world impact. Currently working at Script Health, I work on building enterprise-grade solutions for Fortune 500 clients by designing robust architectures, implementing cloud services, and developing intuitive user experiences. I am also actively deepening my work in AI and machine learning, exploring how intelligent systems can be applied to real-world products. Outside of work, I enjoy building side projects, and I take pride in attention to detail and a strong commitment to creating software that makes a meaningful difference.
         </p>
         <p style="font-size: 18px; margin-bottom:0;">Glad to meet you! <span style="font-size: 24px;">🍻</span></p>
         <br>
