Update highlight background color to enhance visibility

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     }
 
     .highlight {
-      background: linear-gradient(180deg, transparent 0%, #008000 0%);
+      background: linear-gradient(180deg, transparent 0%, #facc15 0%);
       color: black;
       padding: 0 2px;
     }
