Update game description to reflect current project focus

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="game-item" style="position: relative; margin-top: 20px; margin-bottom: 20px;">
       <p class="bold-text" style="position: absolute; left: -107px; top: 30px; margin: 0;">3.</p>
       <div class="game-content" style="border: 1px dotted; padding: 20px;">
-        <p style="font-size: 21px;">Building something new  <a href="https://ephileo.us" target="_blank" rel="noopener noreferrer" style="color: green; text-decoration: underline;">here</a> ✨</p>
+        <p style="font-size: 21px;">ephileo - build products people love  <a href="https://ephileo.us" target="_blank" rel="noopener noreferrer" style="color: green; text-decoration: underline;">here</a> ✨</p>
         <div class="image-container">
           <a href="https://ephileo.us" target="_blank" rel="noopener noreferrer">
             <img style="width: 100%; height: auto;" src="ephileo.png" alt="Ephileo" class="game-screenshot">
