Update highlight background color and modify resume link for improved accessibility

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     }
 
     .highlight {
-      background: linear-gradient(180deg, transparent 0%, #F3F210 0%);
+      background: linear-gradient(180deg, transparent 0%, #00c300 0%);
       color: black;
       padding: 0 2px;
     }
@@ -310,8 +310,8 @@
             href="https://portfolio-4a2e3.web.app/" target="_blank" rel="noopener noreferrer"
             style="color: green; text-decoration: underline; font-size: 24px;">🔮</a> 👈</p>
         <br>
-        <a href="resume.pdf" download
-            style="display: inline-block; padding: 10px 24px; background: green; color: white; text-decoration: none; border-radius: 8px; font-size: 14px; font-family: 'SF Mono', SFMono-Regular, ui-monospace, Menlo, Monaco, Consolas, monospace; letter-spacing: 0.5px;"> Resume</a>
+        <a href="resume.pdf" target="_blank" rel="noopener noreferrer"
+            style="display: inline-block; padding: 10px 24px; background: #F3F210; color: black; text-decoration: none; border-radius: 8px; font-size: 14px; font-family: 'SF Mono', SFMono-Regular, ui-monospace, Menlo, Monaco, Consolas, monospace; letter-spacing: 0.5px;"> Resume</a>
       </div>
     </div>
     <!-- <hr style="border: none; border-top: 2px solid green; text-align: center; margin: 20px 0;"> -->
